extends Node2D

signal minigame_finished(success: bool, rewards: Dictionary)

@onready var player = $frog
@onready var Left_pos = $PlayerPosition/Left
@onready var Right_pos = $PlayerPosition/Right
@onready var Center_pos = $PlayerPosition/center
@onready var timer_label = $timer
@onready var scores_label = $scores
@onready var charges_bar = $TextureProgressBar
@onready var low_shoot_collision = $frog/low/CollisionShape2D 
@onready var mid_shoot_collision = $frog/mid/CollisionShape2D 
@onready var high_shoot_collision = $frog/high/CollisionShape2D
@onready var left_border = $border/left/CollisionShape2D
@onready var right_border = $border/right/CollisionShape2D
@onready var top_border = $border/top/CollisionShape2D
@onready var bottom_border = $border/bottom/CollisionShape2D
@onready var left_spawner = $Spawner/Left
@onready var right_spawner = $Spawner/Right

var current_pos = 1
var is_charging = false
var charging_up = true
var shooting = false

@export var firefly_scene: PackedScene

# ===== à¸•à¸±à¹‰à¸‡à¸„à¹ˆà¸²à¸ªà¸³à¸«à¸£à¸±à¸šà¸”à¸µà¸šà¸±à¹Šà¸ =====
@export_group("Debug Settings")
@export var debug_mode: bool = false
@export_range(1, 5) var debug_level: int = 1
@export var auto_start: bool = false

var spawn_interval = 1.0
var max_fireflies = 10

var spawn_timer = 0.0
var fireflies = []

# ===== à¸£à¸°à¸šà¸š Level =====
var current_level = 1
var score = 0
var game_time = 0.0
var level_time_limit = 30.0
var is_game_active = false

# Level Configuration
var level_configs = {
	1: {
		"time_limit": 30.0,
		"target_score": 10,
		"spawn_interval": 1.2,
		"max_fireflies": 8,
		"firefly_speed": 50.0,
		"description": "Easy - à¸ˆà¸±à¸šà¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢ 10 à¸•à¸±à¸§"
	},
	2: {
		"time_limit": 40.0,
		"target_score": 20,
		"spawn_interval": 1.0,
		"max_fireflies": 12,
		"firefly_speed": 70.0,
		"description": "Normal - à¸ˆà¸±à¸šà¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢ 20 à¸•à¸±à¸§"
	},
	3: {
		"time_limit": 45.0,
		"target_score": 30,
		"spawn_interval": 0.8,
		"max_fireflies": 15,
		"firefly_speed": 90.0,
		"description": "Hard - à¸ˆà¸±à¸šà¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢ 30 à¸•à¸±à¸§"
	},
	4: {
		"time_limit": 60.0,
		"target_score": 50,
		"spawn_interval": 0.6,
		"max_fireflies": 20,
		"firefly_speed": 110.0,
		"description": "Expert - à¸ˆà¸±à¸šà¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢ 50 à¸•à¸±à¸§"
	},
	5: {
		"time_limit": 50.0,
		"target_score": 40,
		"spawn_interval": 0.5,
		"max_fireflies": 25,
		"firefly_speed": 130.0,
		"description": "Master - à¸ˆà¸±à¸šà¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢ 40 à¸•à¸±à¸§ (à¹€à¸£à¹‡à¸§à¸¡à¸²à¸!)"
	}
}
func _update_ui():
	"""à¸­à¸±à¸›à¹€à¸”à¸• UI"""
	var target = level_configs[current_level]["target_score"]
	scores_label.text = "Score: %d / %d" % [score, target]
	
	# à¹à¸ªà¸”à¸‡à¹€à¸§à¸¥à¸²à¸—à¸µà¹ˆà¹€à¸«à¸¥à¸·à¸­ (à¸™à¸²à¸—à¸µ:à¸§à¸´à¸™à¸²à¸—à¸µ à¸–à¹‰à¸²à¸¡à¸²à¸à¸à¸§à¹ˆà¸² 60 à¸§à¸´)
	var minutes = int(game_time) / 60
	var seconds = int(game_time) % 60
	
	if game_time >= 60:
		timer_label.text = "Time: %d:%02d" % [minutes, seconds]
	else:
		timer_label.text = "Time: %.1fs" % game_time
	
	# à¹€à¸›à¸¥à¸µà¹ˆà¸¢à¸™à¸ªà¸µà¹€à¸•à¸·à¸­à¸™à¸–à¹‰à¸²à¹€à¸§à¸¥à¸²à¹€à¸«à¸¥à¸·à¸­à¸™à¹‰à¸­à¸¢
	if game_time <= 10:
		timer_label.modulate = Color.RED
	elif game_time <= 20:
		timer_label.modulate = Color.YELLOW
	else:
		timer_label.modulate = Color.WHITE

func _start_game():
	"""à¹€à¸£à¸´à¹ˆà¸¡à¹€à¸à¸¡"""
	is_game_active = true
	game_time = level_time_limit
	score = 0
	spawn_timer = 0.0  # à¸£à¸µà¹€à¸‹à¹‡à¸• spawn timer
	
	# à¸£à¸µà¹€à¸‹à¹‡à¸• UI
	if timer_label:
		timer_label.modulate = Color.WHITE
	
	_update_ui()
	print("ðŸŽ® Game Started - Level %d" % current_level)

func _ready():
	charges_bar.value = 0
	player.play("default")
	
	# ===== à¹‚à¸«à¸¡à¸”à¸”à¸µà¸šà¸±à¹Šà¸ =====
	if debug_mode:
		print("ðŸ› DEBUG MODE ENABLED")
		print("Press F5 to restart minigame")
		print("Press 1-5 to change level")
		if auto_start:
			setup({"level": debug_level})

func setup(data: Dictionary):
	"""à¹€à¸£à¸µà¸¢à¸à¸ˆà¸²à¸ GamestateManager à¹€à¸žà¸·à¹ˆà¸­à¸•à¸±à¹‰à¸‡à¸„à¹ˆà¸² level"""
	current_level = int(data.get("level", 1))
	
	# à¸•à¸£à¸§à¸ˆà¸ªà¸­à¸šà¸§à¹ˆà¸² level à¸–à¸¹à¸à¸•à¹‰à¸­à¸‡à¸«à¸£à¸·à¸­à¹„à¸¡à¹ˆ
	if not level_configs.has(current_level):
		current_level = 1
	
	_apply_level_config()
	_start_game()

func _apply_level_config():
	"""à¸™à¸³à¸„à¹ˆà¸²à¸ˆà¸²à¸ config à¸¡à¸²à¹ƒà¸Šà¹‰"""
	var config = level_configs[current_level]
	
	level_time_limit = config["time_limit"]
	spawn_interval = config["spawn_interval"]
	max_fireflies = config["max_fireflies"]
	
	print("Level %d: %s" % [current_level, config["description"]])


func _process(delta):
	# ===== Debug Controls =====
	if debug_mode:
		_handle_debug_input()
	
	if not is_game_active:
		return
	
	# ===== à¸­à¸±à¸›à¹€à¸”à¸•à¹€à¸§à¸¥à¸² =====
	game_time -= delta
	if game_time <= 0:
		_end_game(false)
		return
	
	# ===== à¹€à¸Šà¹‡à¸„à¸Šà¸™à¸° =====
	var target = level_configs[current_level]["target_score"]
	if score >= target:
		_end_game(true)
		return
	
	_update_ui()
	
	if shooting:
		return

	handle_move_input()
	handle_charge_input(delta)
	
	# ===== Spawn à¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢ =====
	spawn_timer += delta
	if spawn_timer >= spawn_interval and fireflies.size() < max_fireflies:
		spawn_timer = 0
		_spawn_firefly()

func _handle_debug_input():
	"""à¸„à¸§à¸šà¸„à¸¸à¸¡à¸à¸²à¸£à¸”à¸µà¸šà¸±à¹Šà¸"""
	# à¸à¸” F5 à¹€à¸žà¸·à¹ˆà¸­à¸£à¸µà¸ªà¸•à¸²à¸£à¹Œà¸—
	if Input.is_action_just_pressed("ui_cancel"):  # ESC
		_restart_game()
	
	# à¸à¸” 1-5 à¹€à¸žà¸·à¹ˆà¸­à¹€à¸›à¸¥à¸µà¹ˆà¸¢à¸™ level
	if Input.is_action_just_pressed("ui_page_up"):  # Page Up = à¹€à¸žà¸´à¹ˆà¸¡ level
		debug_level = min(debug_level + 1, 5)
		_restart_game()
	elif Input.is_action_just_pressed("ui_page_down"):  # Page Down = à¸¥à¸” level
		debug_level = max(debug_level - 1, 1)
		_restart_game()
	
	# à¸à¸” F1-F5 à¹€à¸žà¸·à¹ˆà¸­à¹€à¸¥à¸·à¸­à¸ level à¹‚à¸”à¸¢à¸•à¸£à¸‡
	if Input.is_key_pressed(KEY_F1):
		debug_level = 1
		_restart_game()
	elif Input.is_key_pressed(KEY_F2):
		debug_level = 2
		_restart_game()
	elif Input.is_key_pressed(KEY_F3):
		debug_level = 3
		_restart_game()
	elif Input.is_key_pressed(KEY_F4):
		debug_level = 4
		_restart_game()
	elif Input.is_key_pressed(KEY_F5):
		debug_level = 5
		_restart_game()
	
	# à¸à¸” Space à¸¢à¸²à¸§à¹† à¹€à¸žà¸·à¹ˆà¸­à¹€à¸žà¸´à¹ˆà¸¡à¸„à¸°à¹à¸™à¸™ (à¹‚à¸à¸‡)
	if Input.is_key_pressed(KEY_SPACE) and Input.is_key_pressed(KEY_SHIFT):
		score += 1

func _restart_game():
	"""à¸£à¸µà¸ªà¸•à¸²à¸£à¹Œà¸—à¹€à¸à¸¡à¸”à¹‰à¸§à¸¢ level à¸›à¸±à¸ˆà¸ˆà¸¸à¸šà¸±à¸™"""
	# à¸¥à¸šà¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢à¹€à¸à¹ˆà¸²
	for ff in fireflies:
		if is_instance_valid(ff):
			ff.queue_free()
	fireflies.clear()
	
	setup({"level": debug_level})
	print("ðŸ”„ Restarted Level %d" % debug_level)

func _spawn_firefly():
	if not firefly_scene:
		print("ERROR: firefly_scene not set!")
		return
		
	var ff = firefly_scene.instantiate()
	
	# à¸•à¸³à¹à¸«à¸™à¹ˆà¸‡ spawn à¹à¸šà¸šà¸ªà¸¸à¹ˆà¸¡
	var min_x = left_spawner.position.x
	var max_x = right_spawner.position.x
	var x = randf_range(min_x, max_x) + randf_range(-25, 25)
	var y = Center_pos.position.y + randf_range(-25, 25)
	
	ff.position = Vector2(x, y)
	
	# à¸•à¸±à¹‰à¸‡à¸„à¸§à¸²à¸¡à¹€à¸£à¹‡à¸§à¸•à¸²à¸¡ level
	if ff.has_method("set_speed"):
		var speed = level_configs[current_level]["firefly_speed"]
		ff.set_speed(speed)
	
	add_child(ff)
	fireflies.append(ff)

func add_score(points: int):
	"""à¹€à¸£à¸µà¸¢à¸à¸ˆà¸²à¸ firefly à¹€à¸¡à¸·à¹ˆà¸­à¹‚à¸”à¸™à¸¢à¸´à¸‡"""
	score += points
	_update_ui()  # â¬…ï¸ à¸­à¸±à¸›à¹€à¸”à¸• UI à¸—à¸±à¸™à¸—à¸µà¸—à¸µà¹ˆà¹„à¸”à¹‰à¸„à¸°à¹à¸™à¸™
	
	# à¹€à¸Šà¹‡à¸„à¸Šà¸™à¸°à¸—à¸±à¸™à¸—à¸µà¸«à¸¥à¸±à¸‡à¹€à¸žà¸´à¹ˆà¸¡à¸„à¸°à¹à¸™à¸™
	var target = level_configs[current_level]["target_score"]
	if score >= target and is_game_active:
		# à¸«à¸™à¹ˆà¸§à¸‡à¹€à¸§à¸¥à¸²à¸™à¸´à¸”à¸™à¸¶à¸‡à¹ƒà¸«à¹‰à¹€à¸«à¹‡à¸™à¸„à¸°à¹à¸™à¸™à¹€à¸•à¹‡à¸¡
		await get_tree().create_timer(0.3).timeout
		_end_game(true)
	
	print("Score: %d / %d" % [score, target])

func _end_game(success: bool):
	"""à¸ˆà¸šà¹€à¸à¸¡"""
	is_game_active = false
	
	# à¸—à¸³à¸¥à¸²à¸¢à¸«à¸´à¹ˆà¸‡à¸«à¹‰à¸­à¸¢à¸—à¸µà¹ˆà¹€à¸«à¸¥à¸·à¸­
	for ff in fireflies:
		if is_instance_valid(ff):
			ff.queue_free()
	fireflies.clear()
	
	# à¸„à¸³à¸™à¸§à¸“à¸£à¸²à¸‡à¸§à¸±à¸¥
	var rewards = _calculate_rewards(success)
	
	# à¹à¸ªà¸”à¸‡à¸œà¸¥à¸¥à¸±à¸žà¸˜à¹Œ
	if success:
		print("âœ… LEVEL %d CLEAR! Score: %d" % [current_level, score])
	else:
		print("âŒ TIME'S UP! Score: %d" % score)
	
	# ===== à¹‚à¸«à¸¡à¸”à¸”à¸µà¸šà¸±à¹Šà¸: à¹„à¸¡à¹ˆà¸ªà¹ˆà¸‡ signal =====
	if debug_mode:
		print("ðŸ› Debug Mode: Press ESC to restart")
		return
	
	# à¸ªà¹ˆà¸‡à¸ªà¸±à¸à¸à¸²à¸“à¸à¸¥à¸±à¸šà¹„à¸›à¸—à¸µà¹ˆ GamestateManager
	emit_signal("minigame_finished", success, rewards)
	
func _calculate_rewards(success: bool) -> Dictionary:
	"""à¸„à¸³à¸™à¸§à¸“à¸£à¸²à¸‡à¸§à¸±à¸¥à¸•à¸²à¸¡ level à¹à¸¥à¸°à¸œà¸¥à¸à¸²à¸£à¹€à¸¥à¹ˆà¸™"""
	var rewards = {}
	
	if success:
		# à¸„à¸³à¸™à¸§à¸“à¹€à¸›à¸­à¸£à¹Œà¹€à¸‹à¹‡à¸™à¸•à¹Œà¸—à¸µà¹ˆà¸—à¸³à¹„à¸”à¹‰
		var target = level_configs[current_level]["target_score"]
		var score_percent = (float(score) / float(target)) * 100.0
		
		# à¸£à¸²à¸‡à¸§à¸±à¸¥à¸žà¸·à¹‰à¸™à¸à¸²à¸™à¸•à¸²à¸¡ level
		var base_rewards = {}
		match current_level:
			1:
				base_rewards = {"agi": 2, "energy": -5}
			2:
				base_rewards = {"agi": 3, "int": 1, "energy": -10}
			3:
				base_rewards = {"agi": 5, "int": 2, "energy": -15}
			4:
				base_rewards = {"agi": 7, "int": 3, "pow": 1, "energy": -20}
			5:
				base_rewards = {"agi": 10, "int": 5, "pow": 2, "energy": -25}
		
		rewards = base_rewards.duplicate()
		
		# â­ à¹‚à¸šà¸™à¸±à¸ªà¸–à¹‰à¸²à¸—à¸³à¹„à¸”à¹‰à¸”à¸µ (à¸„à¸°à¹à¸™à¸™à¹€à¸à¸´à¸™ 150% à¸‚à¸­à¸‡à¹€à¸›à¹‰à¸²à¸«à¸¡à¸²à¸¢)
		if score_percent >= 150:
			rewards["health"] = 50  # à¸Ÿà¸·à¹‰à¸™ HP 50%
			rewards["sanity"] = 20
			print("ðŸŒŸ PERFECT! Bonus: +50% HP, +20 Sanity")
		# â­ à¹‚à¸šà¸™à¸±à¸ªà¸›à¸²à¸™à¸à¸¥à¸²à¸‡ (à¸„à¸°à¹à¸™à¸™à¹€à¸à¸´à¸™ 120%)
		elif score_percent >= 120:
			rewards["health"] = 30  # à¸Ÿà¸·à¹‰à¸™ HP 30%
			print("âœ¨ GREAT! Bonus: +30% HP")
		# â­ à¸œà¹ˆà¸²à¸™à¹à¸šà¸šà¸žà¸­à¸”à¸µ (100-119%)
		else:
			print("âœ… CLEAR!")
		
		# à¹„à¸­à¹€à¸—à¸¡à¸žà¸´à¹€à¸¨à¸©à¸ªà¸³à¸«à¸£à¸±à¸š level 5 perfect
		if current_level == 5 and score_percent >= 150:
			if not rewards.has("items"):
				rewards["items"] = []
			rewards["items"].append("golden_firefly")
			print("ðŸ† Got Golden Firefly!")
		
		print("Final Score: %d / %d (%.1f%%)" % [score, target, score_percent])
		
	else:
		# à¸¥à¹‰à¸¡à¹€à¸«à¸¥à¸§ à¹à¸•à¹ˆà¹„à¸”à¹‰à¸šà¸²à¸‡à¸­à¸¢à¹ˆà¸²à¸‡à¸•à¸²à¸¡à¸„à¸°à¹à¸™à¸™à¸—à¸µà¹ˆà¸—à¸³à¹„à¸”à¹‰
		var target = level_configs[current_level]["target_score"]
		var score_percent = (float(score) / float(target)) * 100.0
		
		if score_percent >= 80:
			# à¹€à¸à¸·à¸­à¸šà¸œà¹ˆà¸²à¸™ à¹„à¸”à¹‰à¸£à¸²à¸‡à¸§à¸±à¸¥à¸šà¸²à¸‡à¸ªà¹ˆà¸§à¸™
			rewards = {"agi": 1, "energy": -15}
			print("ðŸ˜“ Almost there! (80%+)")
		elif score_percent >= 50:
			# à¸œà¹ˆà¸²à¸™à¸„à¸£à¸¶à¹ˆà¸‡
			rewards = {"energy": -10}
			print("ðŸ˜… Not bad! (50%+)")
		else:
			# à¹à¸¢à¹ˆà¸¡à¸²à¸
			rewards = {"energy": -20, "sanity": -10}
			print("ðŸ˜° Try harder next time")
	
	return rewards


func handle_move_input():
	if Input.is_action_just_pressed("ui_left"):
		if current_pos > 0:
			current_pos -= 1
			_update_player_position()
	elif Input.is_action_just_pressed("ui_right"):
		if current_pos < 2:
			current_pos += 1
			_update_player_position()

func _update_player_position():
	match current_pos:
		0:
			player.position = Left_pos.position
		1:
			player.position = Center_pos.position
		2:
			player.position = Right_pos.position

func handle_charge_input(delta):
	if Input.is_action_just_pressed("ui_accept"):
		if not is_charging:
			is_charging = true
			charging_up = true
		else:
			_perform_shoot()
			is_charging = false
			charges_bar.value = 0

	if is_charging:
		_update_charge(delta)

func _update_charge(delta):
	var speed = 0.0
	if charging_up:
		if charges_bar.value < 50:
			speed = 100 * delta * 3
		elif charges_bar.value < 75:
			speed = 100 * delta * 2
		else:
			speed = 100 * delta * 1
		charges_bar.value += speed
		if charges_bar.value >= 100:
			charges_bar.value = 100
			charging_up = false
	else:
		if charges_bar.value > 80:
			speed = 100 * delta * 3
		elif charges_bar.value > 60:
			speed = 100 * delta * 2
		else:
			speed = 100 * delta * 1
		charges_bar.value -= speed
		if charges_bar.value <= 0:
			charges_bar.value = 0
			charging_up = true

func _perform_shoot():
	shooting = true

	var value = charges_bar.value
	if value < 60:
		player.play("low_shoot")
		low_shoot_collision.disabled = false
	elif value < 80:
		player.play("middle_shoot")
		mid_shoot_collision.disabled = false
	else:
		player.play("high_shoot")
		high_shoot_collision.disabled = false

	await player.animation_finished
	_reset_collisions()
	shooting = false
	
func _reset_collisions():
	low_shoot_collision.disabled = true
	mid_shoot_collision.disabled = true
	high_shoot_collision.disabled = true
	player.animation = "default"

# ===== Collision Handlers =====

func _on_left_area_entered(area):
	if area.is_in_group("prey"):
		area.queue_free()
	if fireflies.has(area):
		fireflies.erase(area)

func _on_right_area_entered(area):
	if area.is_in_group("prey"):
		area.queue_free()
	if fireflies.has(area):
		fireflies.erase(area)

func _on_top_area_entered(area):
	if area.is_in_group("prey"):
		area.queue_free()
	if fireflies.has(area):
		fireflies.erase(area)

func _on_bottom_area_entered(area):
	if area.is_in_group("prey"):
		area.queue_free()
	if fireflies.has(area):
		fireflies.erase(area)

func _on_high_area_entered(area):
	if area.is_in_group("prey") and area.has_method("_on_hit"):
		area._on_hit()
		add_score(1)  # à¹€à¸žà¸´à¹ˆà¸¡à¸„à¸°à¹à¸™à¸™
	if fireflies.has(area):
		fireflies.erase(area)

func _on_mid_area_entered(area):
	if area.is_in_group("prey") and area.has_method("_on_hit"):
		area._on_hit()
		add_score(1)
	if fireflies.has(area):
		fireflies.erase(area)

func _on_low_area_entered(area):
	if area.is_in_group("prey") and area.has_method("_on_hit"):
		area._on_hit()
		add_score(1)
	if fireflies.has(area):
		fireflies.erase(area)
